--- a/Codeforces/TopUsersModule/View/TopUsersViewContoller.xib
+++ b/Codeforces/TopUsersModule/View/TopUsersViewContoller.xib
@@ -130,10 +130,10 @@
                 <constraint firstItem="Sgf-UF-56L" firstAttribute="top" secondItem="J5h-ds-bdv" secondAttribute="bottom" constant="8" id="3XS-o7-Pqg"/>
                 <constraint firstItem="eZx-M6-cpT" firstAttribute="top" secondItem="jE2-Em-yUT" secondAttribute="bottom" constant="8" id="6Pa-bx-rcV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Sgf-UF-56L" secondAttribute="trailing" constant="20" id="Ahl-hd-i0o"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="jE2-Em-yUT" secondAttribute="trailing" constant="-55" id="Bqm-9n-dMQ"/>
+                <constraint firstAttribute="trailing" secondItem="jE2-Em-yUT" secondAttribute="trailing" constant="-55" id="Bqm-9n-dMQ"/>
                 <constraint firstItem="Aeh-xG-MrP" firstAttribute="top" secondItem="1Ut-oj-Hhk" secondAttribute="bottom" id="CEQ-kA-RJk"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="J5h-ds-bdv" secondAttribute="trailing" constant="-55" id="EmB-aJ-fYg"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="eZx-M6-cpT" secondAttribute="trailing" constant="-55" id="Ff1-Ac-Eeq"/>
+                <constraint firstAttribute="trailing" secondItem="J5h-ds-bdv" secondAttribute="trailing" constant="-55" id="EmB-aJ-fYg"/>
+                <constraint firstAttribute="trailing" secondItem="eZx-M6-cpT" secondAttribute="trailing" constant="-55" id="Ff1-Ac-Eeq"/>
                 <constraint firstItem="Aeh-xG-MrP" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="LBn-bk-NIZ"/>
                 <constraint firstItem="Aeh-xG-MrP" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Qcb-7R-1HH"/>
                 <constraint firstItem="1Ut-oj-Hhk" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Rzr-5E-ggu"/>
