--- a/Codeforces/Components/Cells/InfoCellView.xib
+++ b/Codeforces/Components/Cells/InfoCellView.xib
@@ -23,6 +23,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="yUP-aI-Qxa" firstAttribute="top" secondItem="1Hw-xg-yns" secondAttribute="top" constant="10" id="74T-N8-u7d"/>
                     <constraint firstAttribute="bottom" secondItem="yUP-aI-Qxa" secondAttribute="bottom" constant="10" id="Ngg-qM-jnm"/>
@@ -30,6 +31,7 @@
                     <constraint firstItem="yUP-aI-Qxa" firstAttribute="leading" secondItem="1Hw-xg-yns" secondAttribute="leading" constant="20" symbolic="YES" id="amw-GO-OJR"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="infoLabel" destination="yUP-aI-Qxa" id="lO0-Fy-RbU"/>
             </connections>
