--- a/Codeforces/ContestDetailModule/View/ContestDetailViewController.xib
+++ b/Codeforces/ContestDetailModule/View/ContestDetailViewController.xib
@@ -6,14 +6,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContestDetailViewController" customModule="Code_Forces" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="k0m-dF-0ow" id="KQd-ha-xj6"/>
-                <outlet property="detailTableView" destination="uuR-eL-Itq" id="dFc-GQ-k3r"/>
+                <outlet property="contestDetailTableView" destination="uuR-eL-Itq" id="qGW-hR-Ff6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,9 +24,9 @@
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k0m-dF-0ow" userLabel="Content view">
                     <rect key="frame" x="0.0" y="324.5" width="414" height="537.5"/>
                     <subviews>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuR-eL-Itq">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuR-eL-Itq">
                             <rect key="frame" x="0.0" y="20" width="414" height="509.5"/>
-                            <color key="backgroundColor" name="AppTheme"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <outlet property="dataSource" destination="-1" id="DoM-xb-6CZ"/>
                                 <outlet property="delegate" destination="-1" id="h2B-75-GGZ"/>
@@ -35,7 +34,7 @@
                         </tableView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4GU-Sc-a4r">
                             <rect key="frame" x="184.5" y="8" width="45" height="4"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" name="Pin"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="45" id="jJa-td-aRD"/>
                                 <constraint firstAttribute="height" constant="4" id="vde-rj-Gnf"/>
@@ -47,7 +46,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="AppTheme"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="uuR-eL-Itq" secondAttribute="bottom" constant="8" id="0vD-dX-OoA"/>
                         <constraint firstAttribute="trailing" secondItem="uuR-eL-Itq" secondAttribute="trailing" id="91W-dn-9oE"/>
@@ -71,10 +70,10 @@
     </objects>
     <resources>
         <namedColor name="AppTheme">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="Pin">
+            <color red="0.52156862745098043" green="0.52156862745098043" blue="0.58431372549019611" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
