--- a/Codeforces/TopUsersModule/View/NewTopUserCellView.xib
+++ b/Codeforces/TopUsersModule/View/NewTopUserCellView.xib
@@ -4,54 +4,72 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="NewTopUserCell" customModule="Code_Forces" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="NewTopUserCell" customModule="Code_Forces" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z4d-C4-30Q">
-                        <rect key="frame" x="12" y="16" width="44" height="44"/>
+                        <rect key="frame" x="12" y="16" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="BUc-G9-agC"/>
-                            <constraint firstAttribute="width" constant="44" id="hYj-tP-D7N"/>
+                            <constraint firstAttribute="height" priority="999" constant="60" id="BUc-G9-agC"/>
+                            <constraint firstAttribute="width" constant="60" id="hYj-tP-D7N"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="30"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Av1-HU-Rw1">
-                        <rect key="frame" x="64" y="14" width="244" height="20"/>
-                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Av1-HU-Rw1">
+                        <rect key="frame" x="80" y="14" width="228" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="Ju6-lf-fEo"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                        <color key="textColor" name="Title"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDg-CB-4V0">
-                        <rect key="frame" x="64" y="38" width="244" height="20"/>
+                        <rect key="frame" x="80" y="38" width="228" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Ly7-Dn-KCG"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" name="Subtitle"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KH7-Lv-Vbe">
+                        <rect key="frame" x="80" y="91" width="240" height="1"/>
+                        <color key="backgroundColor" name="Separator"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="ELE-BP-deb"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="YDg-CB-4V0" firstAttribute="leading" secondItem="z4d-C4-30Q" secondAttribute="trailing" constant="8" symbolic="YES" id="08c-Wp-cnp"/>
+                    <constraint firstAttribute="bottom" secondItem="KH7-Lv-Vbe" secondAttribute="bottom" id="AnS-nn-KTZ"/>
                     <constraint firstItem="YDg-CB-4V0" firstAttribute="top" secondItem="Av1-HU-Rw1" secondAttribute="bottom" constant="4" id="DKn-7H-bbe"/>
                     <constraint firstAttribute="trailing" secondItem="YDg-CB-4V0" secondAttribute="trailing" constant="12" id="IFK-iN-arr"/>
-                    <constraint firstAttribute="bottom" secondItem="YDg-CB-4V0" secondAttribute="bottom" constant="18" id="LND-BD-zBV"/>
                     <constraint firstItem="Av1-HU-Rw1" firstAttribute="leading" secondItem="z4d-C4-30Q" secondAttribute="trailing" constant="8" symbolic="YES" id="YNi-pe-6Jj"/>
+                    <constraint firstAttribute="trailing" secondItem="KH7-Lv-Vbe" secondAttribute="trailing" id="aWF-Qn-d2I"/>
+                    <constraint firstAttribute="bottom" secondItem="z4d-C4-30Q" secondAttribute="bottom" constant="16" id="b2A-HO-zdo"/>
                     <constraint firstAttribute="trailing" secondItem="Av1-HU-Rw1" secondAttribute="trailing" constant="12" id="bEY-5j-1Bg"/>
-                    <constraint firstAttribute="bottom" secondItem="z4d-C4-30Q" secondAttribute="bottom" constant="16" id="cP8-bw-fhy"/>
                     <constraint firstItem="Av1-HU-Rw1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="cqk-cr-uZM"/>
                     <constraint firstItem="z4d-C4-30Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="jRh-w9-U3O"/>
                     <constraint firstItem="z4d-C4-30Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="jzJ-5s-jfv"/>
+                    <constraint firstItem="KH7-Lv-Vbe" firstAttribute="leading" secondItem="YDg-CB-4V0" secondAttribute="leading" id="p0e-OI-crY"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -61,7 +79,18 @@
                 <outlet property="userRatingLabel" destination="YDg-CB-4V0" id="QVf-fS-3ZU"/>
                 <outlet property="usernameLabel" destination="Av1-HU-Rw1" id="ZFc-YS-q1q"/>
             </connections>
-            <point key="canvasLocation" x="50.769230769230766" y="31.635071090047393"/>
+            <point key="canvasLocation" x="50.769230769230766" y="37.677725118483409"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="Separator">
+            <color red="0.82352941176470584" green="0.82352941176470584" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Subtitle">
+            <color red="0.62745098039215685" green="0.62745098039215685" blue="0.62745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Title">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
