--- a/Codeforces/TopUsersModule/View/TopUserCellView.xib
+++ b/Codeforces/TopUsersModule/View/TopUserCellView.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="NewTopUserCell" customModule="Code_Forces" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="TopUserCell" customModule="Code_Forces" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="92"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z4d-C4-30Q">
-                        <rect key="frame" x="12" y="16" width="60" height="60"/>
+                        <rect key="frame" x="12" y="12" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="height" priority="999" constant="60" id="BUc-G9-agC"/>
-                            <constraint firstAttribute="width" constant="60" id="hYj-tP-D7N"/>
+                            <constraint firstAttribute="height" priority="999" constant="50" id="BUc-G9-agC"/>
+                            <constraint firstAttribute="width" secondItem="z4d-C4-30Q" secondAttribute="height" multiplier="1:1" id="W4c-dZ-W9A"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -31,7 +31,7 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Av1-HU-Rw1">
-                        <rect key="frame" x="80" y="14" width="228" height="20"/>
+                        <rect key="frame" x="70" y="10" width="238" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Ju6-lf-fEo"/>
                         </constraints>
@@ -40,7 +40,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDg-CB-4V0">
-                        <rect key="frame" x="80" y="38" width="228" height="20"/>
+                        <rect key="frame" x="70" y="34" width="238" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="Ly7-Dn-KCG"/>
                         </constraints>
@@ -49,7 +49,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KH7-Lv-Vbe">
-                        <rect key="frame" x="80" y="91" width="240" height="1"/>
+                        <rect key="frame" x="70" y="73" width="250" height="1"/>
                         <color key="backgroundColor" name="Separator"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="ELE-BP-deb"/>
@@ -64,11 +64,11 @@
                     <constraint firstAttribute="trailing" secondItem="YDg-CB-4V0" secondAttribute="trailing" constant="12" id="IFK-iN-arr"/>
                     <constraint firstItem="Av1-HU-Rw1" firstAttribute="leading" secondItem="z4d-C4-30Q" secondAttribute="trailing" constant="8" symbolic="YES" id="YNi-pe-6Jj"/>
                     <constraint firstAttribute="trailing" secondItem="KH7-Lv-Vbe" secondAttribute="trailing" id="aWF-Qn-d2I"/>
-                    <constraint firstAttribute="bottom" secondItem="z4d-C4-30Q" secondAttribute="bottom" constant="16" id="b2A-HO-zdo"/>
+                    <constraint firstAttribute="bottom" secondItem="z4d-C4-30Q" secondAttribute="bottom" constant="12" id="b2A-HO-zdo"/>
                     <constraint firstAttribute="trailing" secondItem="Av1-HU-Rw1" secondAttribute="trailing" constant="12" id="bEY-5j-1Bg"/>
-                    <constraint firstItem="Av1-HU-Rw1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="cqk-cr-uZM"/>
+                    <constraint firstItem="Av1-HU-Rw1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="cqk-cr-uZM"/>
                     <constraint firstItem="z4d-C4-30Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="jRh-w9-U3O"/>
-                    <constraint firstItem="z4d-C4-30Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="jzJ-5s-jfv"/>
+                    <constraint firstItem="z4d-C4-30Q" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="jzJ-5s-jfv"/>
                     <constraint firstItem="KH7-Lv-Vbe" firstAttribute="leading" secondItem="YDg-CB-4V0" secondAttribute="leading" id="p0e-OI-crY"/>
                 </constraints>
             </tableViewCellContentView>
