--- a/Codeforces/TopUsersModule/View/TopUsersViewController.xib
+++ b/Codeforces/TopUsersModule/View/TopUsersViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewTopUsersViewController" customModule="Code_Forces" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopUsersViewController" customModule="Code_Forces" customModuleProvider="target">
             <connections>
                 <outlet property="searchBar" destination="y6j-MS-QvS" id="XTe-1K-TSK"/>
                 <outlet property="topUsersTableView" destination="If1-EV-ULT" id="X1A-pS-zMB"/>
